--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="mx-auto max-w-2xl px-4"> <img src="./its.jpg" alt="Feature image" class="h-full w-full object-contain rounded-xl mt-6" data-astro-transition-scope="astro-xmqcjxod-1" width="1280"
                 height="800" loading="lazy" decoding="async"> </div>
 
-            <p class="text-gray-600 leading-relaxed text-xl mt-8 mx-4">
+            <p class="text-gray-600 leading-relaxed text-xl mt-8 mx-4 lg:mx-14">
                 I graduated with a Bachelor's degree in Computer Engineering from Sepuluh Nopember Institute of Technology (ITS) in 2024, achieving a GPA of 3.60 out of 4.00. Throughout my studies, I focused on Robotics, Intelligent Systems, and Embedded Systems. My
                 interest in robotics allowed me to explore the design and control of autonomous machines and embedded systems involved integrating software with hardware to create efficient, real-time system.
             </p>
