--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container mx-auto text-center">
             <div class="flex justify-center space-x-6">
                 <!-- LinkedIn Icon -->
-                <a href="edin.com/in/aryaduta-putra-perkasa" target="_blank" rel="noopener" aria-label="Share on LinkedIn">
+                <a href="linkedin.com/in/aryaduta-putra-perkasa" target="_blank" rel="noopener" aria-label="Share on LinkedIn">
                     <svg class="h-12 w-12" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" fill="white">
                         <path d="m35.298,11.009H12.947c-1.07,0-1.938.841-1.938,1.878h0v22.471c0,1.037.869,1.879,1.939,1.879h22.35c1.071,0,1.938-.842,1.938-1.88V12.887c0-1.037-.868-1.878-1.938-1.878Zm-16.319,21.949h-3.925v-11.808h3.925v11.808Zm-1.962-13.42h-.025c-1.317,0-2.169-.907-2.169-2.04,0-1.159.877-2.04,2.221-2.04s2.168.881,2.193,2.04c0,1.133-.851,2.04-2.22,2.04Zm16.114,13.42h-3.924v-6.317c0-1.587-.568-2.67-1.988-2.67-1.085,0-1.73.731-2.013,1.436-.105.252-.13.605-.13.958v6.593h-3.924s.05-10.7,0-11.808h3.924v1.675c.522-.806,1.452-1.952,3.537-1.952,2.582,0,4.518,1.688,4.518,5.315v6.77Z"
                         fill="#FFFFFF"></path>
